-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0 Beta 2
-
None
-
Windows 7
-
dde3f6a934ae26c8e92b0132b1bb85c0aa841ac1
There are some circumstances that cause widgets to receive enter event for every mouse move event. Steps to reproduce with attached sample application:
Modal dialog:
1) Click "Msg Box" button -> this opens a modal message box.
2) Move mouse cursor around over the message box -> Observer constant stream of enter events like this in trace.
20478 ## Got Enter for: QDialogButtonBox(0x43494a0, name = "qt_msgbox_buttonbox") 20482 ## Got Enter for: QDialogButtonBox(0x43494a0, name = "qt_msgbox_buttonbox")
Note: Clicking on anywhere on the message box will stop the excess enter events.
Widget that is explicitly grabbing mouse events;
1) Click "Grab Mouse" button -> this grabs mouse events for said button.
2) Move mouse cursor outside the application main window
3) Move mouse cursor back over "Grab Mouse" button and move it around over it -> Observe constant stream of enter events like this in trace:
7902 ## Got Enter for: QWidget(0x1c6dfb0, name = "centralWidget") 7903 ## Got Enter for: QPushButton(0x1ccc2b0, name = "grabButton") 7917 ## Got Enter for: QWidget(0x1c6dfb0, name = "centralWidget") 7918 ## Got Enter for: QPushButton(0x1ccc2b0, name = "grabButton")
For Gerrit Dashboard: QTBUG-27643 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
38501,1 | Fix excess enter events when showing modal dialog on button press | master | qt/qtbase | Status: MERGED | +2 | 0 |
39747,1 | Fix excess enter events when showing modal dialog on button press | winrt | qt/qtbase | Status: ABANDONED | 0 | 0 |